traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:15: error: forward reference extends over definition of variable cpt
   ecritMessage(cpt)
                ^